--- a/learning_logs/templates/learning_logs/index.xhtml
+++ b/learning_logs/templates/learning_logs/index.xhtml
@@ -138,14 +138,15 @@
     </div>
     <div class="col-sm-6 col-lg-4 mb-4">
       <div class="card">
-        <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text></svg>
+        <img class="card-img-top" src="img/untitled.jpg" alt="Image of Italy" width="100%" height="200">
         <div class="card-body">
           <h5 class="card-title">Italy</h5>
-          <p class="card-text">Beautiful scenary in italy during during summer</p>
+          <p class="card-text">Beautiful scenery in Italy during summer</p>
           <p class="card-text"><small class="text-body-secondary"></small></p>
         </div>
       </div>
     </div>
+    
     <div class="col-sm-6 col-lg-4 mb-4">
       <div class="card text-bg-primary text-center p-3">
         <figure class="mb-0">
