added error template

--- a/learning_logs/templates/learning_logs/topics.xhtml
+++ b/learning_logs/templates/learning_logs/topics.xhtml
@@ -2,7 +2,7 @@
 
 
 {% block page_header %}
-  <h1 style="text-align: center; font-family: Arial, sans-serif; color: white;">Topics</h1>
+  <h1 style="text-align: center; font-family: Arial, sans-serif; color: black;">Topics</h1>
 {% endblock page_header %}
 
 {% block content %}
